BE066 Getting know Unreal's Editor

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=E09E5BA94718E4F34B5DE2A9AAAD0DA2
+CompanyName=EmbraceIT Ltd
+CopyrightNotice=Copyright Anil Shrestha 2017
 
 [StartupActions]
 bAddPacks=True
